Build on MinGW now is working, inclusive Win32 resource file processing and gettext support.

--- a/data/pixmaps/Makefile.am
+++ b/data/pixmaps/Makefile.am
@@ -7,7 +7,7 @@
 ## Process this file with automake to produce Makefile.in
 ##
 
-pixmapsdir = $(pkgdatadir)/@PACKAGE_PIXMAPS_DIR@
+pixmapsdir = $(pkgpixmapsdir)
 
 dist_pixmaps_DATA = \
 	dfcgen.png\
