dfcgen-gtk release 0.4

--- a/data/templates/Makefile.in
+++ b/data/templates/Makefile.in
@@ -125,14 +125,14 @@ OBJEXT = @OBJEXT@
 PACKAGE = @PACKAGE@
 PACKAGE_AUTHOR = @PACKAGE_AUTHOR@
 PACKAGE_BUGREPORT = @PACKAGE_BUGREPORT@
-PACKAGE_CFLAGS = @PACKAGE_CFLAGS@
-PACKAGE_LIBS = @PACKAGE_LIBS@
 PACKAGE_NAME = @PACKAGE_NAME@
 PACKAGE_STRING = @PACKAGE_STRING@
 PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
+PKGCONF_CFLAGS = @PKGCONF_CFLAGS@
+PKGCONF_LIBS = @PKGCONF_LIBS@
 PKG_CONFIG = @PKG_CONFIG@
 POSUB = @POSUB@
 SET_MAKE = @SET_MAKE@
@@ -140,6 +140,7 @@ SHELL = @SHELL@
 STRIP = @STRIP@
 USE_NLS = @USE_NLS@
 VERSION = @VERSION@
+WINDRES = @WINDRES@
 XGETTEXT = @XGETTEXT@
 XGETTEXT_015 = @XGETTEXT_015@
 XGETTEXT_EXTRA_OPTIONS = @XGETTEXT_EXTRA_OPTIONS@
@@ -182,6 +183,9 @@ mandir = @mandir@
 mkdir_p = @mkdir_p@
 oldincludedir = @oldincludedir@
 pdfdir = @pdfdir@
+pkgfiltersdir = @pkgfiltersdir@
+pkgpixmapsdir = @pkgpixmapsdir@
+pkgtemplatesdir = @pkgtemplatesdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
@@ -193,7 +197,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-templatesdir = $(pkgdatadir)/templates
+templatesdir = $(pkgtemplatesdir)
 dist_templates_DATA = \
 	export.txt\
 	export.c\
