--- a/Makefile.in
+++ b/Makefile.in
@@ -181,14 +181,14 @@ OBJEXT = @OBJEXT@
 PACKAGE = @PACKAGE@
 PACKAGE_AUTHOR = @PACKAGE_AUTHOR@
 PACKAGE_BUGREPORT = @PACKAGE_BUGREPORT@
-PACKAGE_CFLAGS = @PACKAGE_CFLAGS@
-PACKAGE_LIBS = @PACKAGE_LIBS@
 PACKAGE_NAME = @PACKAGE_NAME@
 PACKAGE_STRING = @PACKAGE_STRING@
 PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
+PKGCONF_CFLAGS = @PKGCONF_CFLAGS@
+PKGCONF_LIBS = @PKGCONF_LIBS@
 PKG_CONFIG = @PKG_CONFIG@
 POSUB = @POSUB@
 SET_MAKE = @SET_MAKE@
@@ -196,6 +196,7 @@ SHELL = @SHELL@
 STRIP = @STRIP@
 USE_NLS = @USE_NLS@
 VERSION = @VERSION@
+WINDRES = @WINDRES@
 XGETTEXT = @XGETTEXT@
 XGETTEXT_015 = @XGETTEXT_015@
 XGETTEXT_EXTRA_OPTIONS = @XGETTEXT_EXTRA_OPTIONS@
@@ -238,6 +239,9 @@ mandir = @mandir@
 mkdir_p = @mkdir_p@
 oldincludedir = @oldincludedir@
 pdfdir = @pdfdir@
+pkgfiltersdir = @pkgfiltersdir@
+pkgpixmapsdir = @pkgpixmapsdir@
+pkgtemplatesdir = @pkgtemplatesdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
@@ -250,18 +254,35 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = po include src data doc
+SUBDIRS = po include src data doc dist
 doc_DATA = \
 	README\
 	COPYING\
 	ChangeLog\
-	INSTALL\
-	dfcgen-gtk.desktop
+	INSTALL
 
 EXTRA_DIST = $(doc_DATA)
 
 # Maintainer rule for building a Debian package
-dist_debian_tmpdir = "dist/$(distdir)"
+dist_debian_dir = "dist/$(distdir)"
+
+# maintainer rule for "package" build on MinGW
+@BUILD_OS_MINGW32_TRUE@GTK_VERSION = $(shell $(PKG_CONFIG) --modversion "gtk+-2.0" | \
+@BUILD_OS_MINGW32_TRUE@                    sed -n 's/^\([0-9]\+\)\.\([0-9]\+\)\(\.[0-9]*\)\?/\1\2/p')
+
+@BUILD_OS_MINGW32_TRUE@dist_win32_dir = ./dist/$(PACKAGE)$(GTK_VERSION)-$(VERSION)
+
+# all GTK/GDK DLLs needed by dfcgen-gtk (heuristically determined)
+@BUILD_OS_MINGW32_TRUE@GTK_DLL_COMMON = libgio-2.0-0.dll libatk-1.0-0.dll libcairo-2.dll libgdk_pixbuf-2.0-0.dll \
+@BUILD_OS_MINGW32_TRUE@         libgdk-win32-2.0-0.dll libglib-2.0-0.dll libgmodule-2.0-0.dll \
+@BUILD_OS_MINGW32_TRUE@         libgobject-2.0-0.dll libgsl-0.dll libgslcblas-0.dll \
+@BUILD_OS_MINGW32_TRUE@         libgtk-win32-2.0-0.dll libiconv-2.dll libintl-8.dll \
+@BUILD_OS_MINGW32_TRUE@         libpango-1.0-0.dll libpangocairo-1.0-0.dll libpangowin32-1.0-0.dll \
+@BUILD_OS_MINGW32_TRUE@         libpng*.dll libgthread-2.0-0.dll libpangoft2-1.0-0.dll zlib1.dll
+
+@BUILD_OS_MINGW32_TRUE@GTK212_DLL_ADDONS = intl.dll libssp-0.dll
+@BUILD_OS_MINGW32_TRUE@GTK220_DLL_ADDONS = freetype6.dll libexpat-1.dll libfontconfig-1.dll
+@BUILD_OS_MINGW32_TRUE@GTK_DLL_LIST = $(GTK_DLL_COMMON) $(GTK212_DLL_ADDONS) $(GTK220_DLL_ADDONS)
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
@@ -777,21 +798,47 @@ uninstall-local:
 	-rm -r $(docdir)
 
 dist-debian: dist
-	mkdir -p dist
-	mv -f $(distdir).* dist
+	svn2cl -r 'HEAD:1' --linelen=80 --group-by-day --separate-daylogs \
+		--reparagraph --authors=".svn-authors" --output=ChangeLog.$(shell date "+%g%m%d")
+	cp -f -t dist $(distdir).tar.gz
 	cd dist && gunzip -c $(distdir).tar.gz | tar xf -
-	cp -Rf dist/debian $(dist_debian_tmpdir)
-	rm -Rf $(dist_debian_tmpdir)/debian/.svn
-	cd $(dist_debian_tmpdir) && dpkg-buildpackage -rfakeroot
+	cp -Rf dist/debian $(dist_debian_dir)
+	rm -Rf $(dist_debian_dir)/debian/.svn
+	cd $(dist_debian_dir) && dpkg-buildpackage -rfakeroot
 	@echo '--------------------------------------------------------------------'
 	@dpkg-parsechangelog -l./dist/debian/changelog
 	@echo '--------------------------------------------------------------------'
-	-rm -Rf $(dist_debian_tmpdir)
+	-rm -Rf $(dist_debian_dir)
+
+@BUILD_OS_MINGW32_TRUE@dist-win32: all
+@BUILD_OS_MINGW32_TRUE@	@echo "Building Win32 distribution in $(dist_win32_dir) ..."
+@BUILD_OS_MINGW32_TRUE@	rm -fR $(dist_win32_dir)
+@BUILD_OS_MINGW32_TRUE@	mkdir $(dist_win32_dir)
+@BUILD_OS_MINGW32_TRUE@	cp ./src/$(PACKAGE)$(EXEEXT) $(dist_win32_dir)
+@BUILD_OS_MINGW32_TRUE@	mkdir $(dist_win32_dir)/share
+@BUILD_OS_MINGW32_TRUE@	cp -R ./data/pixmaps $(dist_win32_dir)/share && rm -fR $(dist_win32_dir)/share/pixmaps/Makefile* $(dist_win32_dir)/share/pixmaps/.svn
+@BUILD_OS_MINGW32_TRUE@	cp -R ./data/filters $(dist_win32_dir)/share && rm -fR $(dist_win32_dir)/share/filters/Makefile* $(dist_win32_dir)/share/filters/.svn
+@BUILD_OS_MINGW32_TRUE@	cp -R ./data/templates $(dist_win32_dir)/share && rm -fR $(dist_win32_dir)/share/templates/Makefile* $(dist_win32_dir)/share/templates/.svn
+@BUILD_OS_MINGW32_TRUE@	mkdir $(dist_win32_dir)/share/locale
+@BUILD_OS_MINGW32_TRUE@	cp -R /mingw/share/locale/de $(dist_win32_dir)/share/locale
+@BUILD_OS_MINGW32_TRUE@	cp -R ./$(POSUB)/de.gmo $(dist_win32_dir)/share/locale/de/LC_MESSAGES/dfcgen-gtk.mo
+@BUILD_OS_MINGW32_TRUE@	cp -R /mingw/etc $(dist_win32_dir)
+@BUILD_OS_MINGW32_TRUE@	mkdir $(dist_win32_dir)/lib
+@BUILD_OS_MINGW32_TRUE@	cp -R /mingw/lib/gtk-2.0 $(dist_win32_dir)/lib && rm -fR $(dist_win32_dir)/lib/gtk-2.0/include
+@BUILD_OS_MINGW32_TRUE@	for f in $(GTK_DLL_LIST); do \
+@BUILD_OS_MINGW32_TRUE@	  echo -e "\tPackaging $(dist_win32_dir)/$$f"; \
+@BUILD_OS_MINGW32_TRUE@	  cp -t $(dist_win32_dir) /mingw/bin/$$f 2>/dev/null; \
+@BUILD_OS_MINGW32_TRUE@	  true; \
+@BUILD_OS_MINGW32_TRUE@	done
+@BUILD_OS_MINGW32_TRUE@	@echo
+@BUILD_OS_MINGW32_TRUE@	@echo '--------------------------------------------------------------------'
+@BUILD_OS_MINGW32_TRUE@	@echo "Win32 package in $(dist_win32_dir) ready for upload"
+@BUILD_OS_MINGW32_TRUE@	@echo '--------------------------------------------------------------------'
 
 maintainer-clean-local:
-	-rm -Rf $(dist_debian_tmpdir)
+	-rm -Rf $(dist_debiandir)
 
-.PHONY: dist-debian
+.PHONY: dist-debian dist-win32
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
