--- a/config.h.in
+++ b/config.h.in
@@ -40,21 +40,6 @@
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
-/* Define to 1 if you have the `glib-2.0' library (-lglib-2.0). */
-#undef HAVE_LIBGLIB_2_0
-
-/* Define to 1 if you have the `gsl' library (-lgsl). */
-#undef HAVE_LIBGSL
-
-/* Define to 1 if you have the `gslcblas' library (-lgslcblas). */
-#undef HAVE_LIBGSLCBLAS
-
-/* Define to 1 if you have the `gtk-x11-2.0' library (-lgtk-x11-2.0). */
-#undef HAVE_LIBGTK_X11_2_0
-
-/* Define to 1 if you have the `m' library (-lm). */
-#undef HAVE_LIBM
-
 /* Define to 1 if you have the <memory.h> header file. */
 #undef HAVE_MEMORY_H
 
@@ -112,7 +97,7 @@
 /* Define to the one symbol short name of this package. */
 #undef PACKAGE_TARNAME
 
-/* package homepage */
+/* Define to the home page for this package. */
 #undef PACKAGE_URL
 
 /* Define to the version of this package. */
