--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -69,7 +69,7 @@ dfcgen_gtk_DEPENDENCIES = $(am__append_1)
 dfcgen_gtk_LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(dfcgen_gtk_LDFLAGS) \
 	$(LDFLAGS) -o $@
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
-depcomp = $(SHELL) $(top_srcdir)/build-aux/depcomp
+depcomp = $(SHELL) $(top_srcdir)/build/depcomp
 am__depfiles_maybe = depfiles
 am__mv = mv -f
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
