--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,9 +1,6 @@
+## -*- mode: makefile-automake -*-
 ##
-## Copyright (C) 2006, 2011-2013 Ralf Hoppe <ralf.hoppe@ieee.org>
-##
-## Version:  $Id$
-##
-## Process this file with automake to produce Makefile.in
+## Copyright (C) 2006, 2011-2013, 2019 Ralf Hoppe <ralf.hoppe@dfcgen.de>
 ##
 
 SUBDIRS = filters templates pixmaps
