--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,6 @@
+## -*- mode: makefile-automake -*-
 ##
-## Copyright (C) 2006, 2011-2012 Ralf Hoppe <ralf.hoppe@ieee.org>
-##
-## Version:  $Id$
-##
-## Process this file with automake to produce Makefile.in
+## Copyright (C) 2006-2020 Ralf Hoppe <ralf.hoppe@dfcgen.de>
 ##
 
 ACLOCAL_AMFLAGS = -I m4
