Added new make target 'doxygen'

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -3,6 +3,18 @@
 ## Copyright (c) 2006-2020 Ralf Hoppe <ralf.hoppe@dfcgen.de>
 ##
 
-dist_html_DATA =\
+EXTRA_DIST =\
 	dfcgen.sty\
 	Doxyfile
+
+override TEXINPUTS = .:$(abs_srcdir):
+export TEXINPUTS
+
+doxygen:
+	doxygen
+
+.PHONY: doxygen
+
+
+maintainer-clean-local:
+	-rm -Rf html/ latex/
