--- a/Makefile.am
+++ b/Makefile.am
@@ -30,12 +30,17 @@ dox:
 .PHONY: dox
 
 
+# get rid of this warning: "warning: shell ...  non-POSIX variable name"
+AUTOMAKE_OPTIONS = -Wno-portability
+
+
 # Maintainer rule for building a Debian package.
 # NOTE: Generates the changelog starting with release 0.4-1.
 distdir_debian = "$(distdir_sub)/$(distdir)"
 
 dist-debian: dist
-	git log --pretty --numstat --summary --no-merges --since=29/10/2016 | git2cl > ChangeLog.$(shell date '+%g%m%d')
+	git log --pretty --numstat --summary --no-merges --since=29/10/2016 | \
+git2cl > "ChangeLog.$(shell date '+%g%m%d')"
 	cp -f -t $(distdir_sub) $(distdir).tar.gz
 	cd $(distdir_sub) && gunzip -c $(distdir).tar.gz | tar xf -
 	cp -fR $(distdir_sub)/debian $(distdir_debian)
@@ -43,39 +48,44 @@ dist-debian: dist
 	@echo '--------------------------------------------------------------------'
 	@dpkg-parsechangelog -l./$(distdir_sub)/debian/changelog
 	@echo '--------------------------------------------------------------------'
+	-rm -Rf $(distdir_debian)
 
 
 # Maintainer rule for Win64 build with MXE
 if BUILD_OS_MINGW32
 
-GTK_VERSION = $(shell $(PKG_CONFIG) --modversion "gtk+-3.0" | \
-                    sed -n 's/^\([0-9]\+\)\.\([0-9]\+\)\(\.[0-9]*\)\?/\1\2/p')
+GTK_VERSION = $(shell $(PKG_CONFIG) --modversion 'gtk+-3.0' | \
+sed -n 's/^\([0-9]\+\)\.\([0-9]\+\)\(\.[0-9]*\)\?/\1\2/p')
+
 dist_win64 = "$(PACKAGE)$(GTK_VERSION)-$(VERSION)"
 distdir_win64 = ./$(distdir_sub)/$(dist_win64)
 dist_archive = $(dist_win64).zip
 
-# MXE (M cross environment):
-# 1. download: git clone https://github.com/mxe/mxe.git
-# 2a) prepare file mxe/settings.mk, then simply do: make -C mxe
-# 2b) or, build w/o mxe/settings.mk: cd mxe && make gtk3 gsl adwaita-icon-theme -j8 MXE_TARGETS='x86_64-w64-mingw32.static'
-# 3. install: chmod -R o+r,o+X mxe; sudo cp -R mxe /opt
-
-# Useful sites:
+# MXE (M cross environment)
+#
+# 0. Background:
 # - MXE Homepage: https://mxe.cc
 # - MXE Sources: https://github.com/mxe/mxe
 # - GTK 3 cross compile to Windows: https://gitlab.melroy.org/melroy/gtk-3-bundle-for-windows
 # - Setting up GTK for Windows: https://www.gtk.org/docs/installations/windows/
-
+#
+# 1. Setup:
+#    - download: git clone https://github.com/mxe/mxe.git
+#    - prepare file mxe/settings.mk, then simply do: make -C mxe
+#      or, build w/o mxe/settings.mk: cd mxe && make gtk3 gsl adwaita-icon-theme -j8 MXE_TARGETS='x86_64-w64-mingw32.static'
+#    - install: chmod -R o+r,o+X mxe; sudo cp -R mxe /opt
+#
+# 2. Build:
+#    - export PATH="/opt/mxe/usr/bin:$PATH"
+#    - ./configure --host='x86_64-w64-mingw32.static'
+#    - make clean dist-win64
+#
 mxe_host_platform = x86_64-w64-mingw32.static
-mxe_win64_dir = /opt/mxe/usr/$(mxe_host_platform)/
+mxe_win64_dir = /opt/mxe/usr/$(mxe_host_platform)
 mxe_bin_dir = /opt/mxe/usr/bin
 
-dist-win64:
+dist-win64: all
 	@echo "Building Win64 distribution in $(distdir_win64) ..."
-
-	export PATH=$(mxe_bin_dir):$$PATH; \
-	./configure --host=$(mxe_host_platform) && make clean all
-
 	rm "./$(distdir_sub)/$(dist_archive)"
 	rm -fR $(distdir_win64)
 	mkdir -p $(distdir_win64)
@@ -99,6 +109,7 @@ dist-win64:
 	@echo '--------------------------------------------------------------------'
 	@echo "Win64 archive $(dist_archive) ready for upload"
 	@echo '--------------------------------------------------------------------'
+	-rm -Rf $(distdir_win64)
 
 endif
 
