--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,6 +1,6 @@
 ## -*- mode: makefile-automake -*-
 ##
-## Copyright (C) 2006, 2011-2013, 2019 Ralf Hoppe <ralf.hoppe@dfcgen.de>
+## Copyright (C) 2006, 2011-2013, 2019, 2022 Ralf Hoppe <dfcgen@rho62.de>
 ##
 
 SUBDIRS = filters templates pixmaps
